# cerebellar_llm

./: .gitignore  2026-04-30_memoryconsolidation-episodicbuffer_research_draft.txt  2026-05-03_llm-as-cerebellar-system.md  2026-05-03_llm-growth-needs-synaptic-pruning.md  2026-05-09_5588b884-ecc7-4c72-bff7-db291748ce2a_research_draft.txt  2026-05-09_7014e03b-e7e7-4a50-bd20-d458f54e9e34-433fb511-3a64-4fe7-884a-1c7cfd00122f_research_draft.txt  2026-05-10_1971478f-9ef1-4cbb-8023-0fbbf801a7f5_research_draft.txt  KAGGLE_SETUP.md  activation_steering.py  benchmark.py  cerebellum.py  config.py  dataset.py  generate.py  main.py  microglia.py  microglia_pruning.py  model.py  prompts.py  pyproject.toml  requirements.txt  train.py  visualize.py
