[project]
name = "gemma-cerebellar-slm"
version = "0.1.0"
description = "100M SLM with Gemma3/Qwen3 SOTA arch + cerebellar error correction + microglia pruning"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3",
    "datasets>=2.14",
    "transformers>=4.40",
    "tiktoken>=0.7",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "wandb>=0.17",
    "scipy>=1.11",
]
